# animalz

./: README.md  pyproject.toml
animalz/: __init__.py  animal.py  fetcher.py  main.py
tests/: test_animalz.py  test_fetcher.py
