[tool.poetry]
name = "animalz"
version = "0.1.0"
description = ""
authors = ["Maor Kern <maor.kern@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
beautifulsoup4 = "^4.8.2"
requests = "^2.22.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
mock = "^3.0.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
